prevent scrollreveal elements flickering

--- a/static/portfolio/css/index.css
+++ b/static/portfolio/css/index.css
@@ -124,6 +124,10 @@ body {
     color: white !important;
 }
 
+.section, .card {
+    visibility: hidden;
+}
+
 .table-div {
     overflow-x: auto;
     margin-bottom: 20px;
